# routes/index.js
@@ -1,15 +1,22 @@
 const express = require("express");
+const passport = require("passport");
 const router = express.Router();
-
-router.get("/", (req, res) => {
-  //#swagger.tags = ['Hello World']
-  res.send("Hello World!");
-});
 
 router.use("/", require("./swagger"));
 
 router.use("/books", require("./book"));
 
 router.use("/borrowers", require("./borrower"));
+
+router.get("/login", passport.authenticate("github"), (req, res) => {});
+
+router.get("/logout", (req, res, next) => {
+  req.logout((err) => {
+    if (err) {
+      return next(err);
+    }
+    res.redirect("/");
+  });
+});
 
 module.exports = router;
